# cursive-aligned-view

./: Cargo.toml  README.md  cargo-test.json  shellshot.json
.github/workflows/: test_and_push.yml
assets/: README.md  config.yml  demo.yml
examples/: builder.rs  dynamic.rs  end2end_align_bottom_center.rs  end2end_align_bottom_left.rs  end2end_align_bottom_right.rs  end2end_align_center.rs  end2end_align_center_left.rs  end2end_align_center_right.rs  end2end_align_top_center.rs  end2end_align_top_left.rs  end2end_align_top_right.rs  end2end_bottom_center.rs  end2end_bottom_right.rs  end2end_center_left.rs  end2end_center_right.rs  end2end_top_center.rs  end2end_top_left.rs  end2end_top_right.rs  rich.rs  simple.rs
scripts/: deploy-badges.sh
src/: lib.rs
tests/: end2end.rs  end2end.test.js  package-lock.json  package.json
tests/__snapshots__/: end2end.test.js.snap
tests/snapshots/: end2end__align_bottom_center.snap  end2end__align_bottom_right.snap  end2end__align_center.snap  end2end__align_center_left.snap  end2end__align_center_right.snap  end2end__align_top_center.snap  end2end__align_top_right.snap  end2end__bottom_left.snap  end2end__end2end_top_left.snap  end2end__exact_match_fill.snap  end2end__squeeze_underfill_bottom_center.snap  end2end__squeeze_underfill_bottom_left.snap  end2end__squeeze_underfill_bottom_right.snap  end2end__squeeze_underfill_center.snap  end2end__squeeze_underfill_center_left.snap  end2end__squeeze_underfill_center_right.snap  end2end__squeeze_underfill_top_center.snap  end2end__squeeze_underfill_top_left.snap  end2end__squeeze_underfill_top_right.snap  end2end__top_left.snap
